# wheat-project

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
wheat-project/: data_cleaning.py  data_collection.py  data_quality.py
